# flashtrace

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  attribution_datasets.py  dump_exp2_hop_vh.py  example.ipynb  ft_ifr_improve.py  ifr_core.py  llm_attr.py  llm_attr_eval.py  lrp_patches.py  lrp_rules.py  model_generation.py  perturbation_fast.py  pyproject.toml  requirements.txt  shared_utils.py  status&plan.md  test_recompute.py
data/: math_mine.json
demo/live/: README.md  app.py  gallery.py  qwen_generation.py  requirements.txt  server.py  service.py  span_parsers.py  token_document.py  token_overlay.py
demo/live/gallery_store/: preset-albania-party-year.json  preset-author-of-play.json  preset-director-2004-film.json  preset-kalanipauahi-niece-husband.json  preset-streak-actress-year.json
demo/live/static/: app.js  index.html  styles.css
docs/: xiaohongshu-icml-2026-spotlight.md
docs/superpowers/plans/: 2026-05-03-flashtrace-public-package.md  2026-05-03-qwen-token-overlay.md  2026-05-23-live-demo-gallery.md
docs/superpowers/specs/: 2026-05-03-flashtrace-public-package-design.md  2026-05-03-qwen-token-overlay-design.md  2026-05-17-fastapi-backend-design.md  2026-05-17-per-hop-generation-attribution-design.md  2026-05-17-qwen3.5-support-design.md  2026-05-17-token-document-frontend-design.md  2026-05-17-unified-chat-template-design.md  2026-05-23-live-demo-gallery-design.md
evaluations/: attribution_coverage.py  attribution_coverage.sh  attribution_recovery.py  attribution_recovery.sh  faithfulness.py  faithfulness.sh  qwen35_faithfulness_smoke.py
examples/: quickstart.py
exp/case_study/: README.md  analysis.py  faithfulness_trace.py  print_cases.py  run_cases.py  run_ifr_case.py  run_mas_case.py  viz.py
exp/exp1/: README.md  run_time_curve.py  time_curve_avg.csv
exp/exp1/out-0/: time_curve_runs.jsonl  time_curve_summary.csv
exp/exp1/out-1/: time_curve_runs.jsonl  time_curve_summary.csv
exp/exp1/out-2/: time_curve_runs.jsonl  time_curve_summary.csv
exp/exp1/out-3/: time_curve_runs.jsonl  time_curve_summary.csv
exp/exp2/: DATASETS.md  README.md  dataset_utils.py  map_math_mine_to_exp2_cache.py  migrate_indices_to_explain_token_span.py  run_exp.py  sample_and_filter.py
exp/exp3/: README.md  extract_segment_weights.py  part_weights.py  run_exp.py  sample_and_filter.py
exp/exp4/: README.md  run_exp.py
exp/exp5/: README.md  map_exp2_cache_token_spans.py
exp/proc/: README.md  map_exp2_traces_to_proc.py
exp/proc_1/: README.md  map_exp2_traces_to_proc_1.py
flashtrace/: __init__.py  attribution.py  cli.py  core.py  improved.py  lrp_patches.py  model_io.py  qwen35.py  result.py  shared_utils.py  tracer.py  viz.py
flashtrace/baselines/: __init__.py  attnlrp.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_core_recompute.py  test_imports.py  test_live_api.py  test_live_demo.py  test_live_gallery.py  test_qwen35_support.py  test_qwen_generation.py  test_result.py  test_shared_utils.py  test_span_parsers.py  test_token_document.py  test_token_overlay.py  test_tracer.py
(+127 files in other folders)
