[project]
name = "cage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bert-score>=0.3.13",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "hf-xet>=1.2.0",
    "huggingface-hub==0.31.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "networkx==3.3",
    "numpy==2.3.3",
    "seaborn==0.11.2",
    "sentence-transformers==4.1.0",
    "spacy==3.8.7",
    "torch==2.7.1",
    "tqdm==4.67.0",
    "transformers==4.53.1",
    "wordfreq==3.1.1",
]
